--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="src/frontendTitleColorChange.js"></script>
   </body>
 </html>
